Правки по финальному заданию 5-го спринта